# NautobotTestPlugin

./: .gitignore  README.md  pyproject.toml
NautobotTestPlugin/: __init__.py  jobs.py
NautobotTestPlugin/templates/NautobotPluginTest/: test_template.html
nautobottestplugin/: __init__.py  forms.py  jobs.py  navigation.py  urls.py  views.py
nautobottestplugin/templates/NautobotPluginTest/: interface_update.html  network_creation.html  plugin_home.html  test_template.html
