[tool.poetry]
name = "nautobottestplugin"
version = "0.1.0"
description = "Test plugin."
authors = ["Michael Cote <michael.james.cote@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
